parser/tests/bad/arr02-1.st
% lower bound of an 'array' must have type 'int'

var arr: array 1.0..2 of int
